# kis-deploy

./: .env.example  .gitignore  .pre-commit-config.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: pyproject.toml  schema.yaml
backend/apps/kis_account/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/kis_account/migrations/: 0002_kisaccount_delete_kisaccounts.py
backend/apps/kis_accounts/: admin.py  apps.py  models.py
backend/apps/kis_accounts/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  test_views.py  urls.py  views.py
backend/config/: urls.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
deploy/: gunicorn.conf.py  kis-backend.service  kis-update.service  kis-update.timer  nginx.conf  setup-server.sh  update.sh
frontend/: .gitignore  .prettierignore  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  router.tsx
frontend/src/api/: auth.ts  client.ts  kis.ts  openapi-client.ts
frontend/src/components/: app-sidebar.tsx  dashboard-layout.tsx  kis-account-form.tsx  login-form.tsx
frontend/src/contexts/: AuthContext.tsx  auth.ts
frontend/src/hooks/: useAuth.ts
frontend/src/layout/: dashboard-layout.tsx
frontend/src/pages/: account-settings.tsx  analytics.tsx  dashboard.tsx  documents.tsx  login.tsx  settings.tsx  users.tsx
frontend/src/types/: api.ts  auth.ts
